DDI-Lifecycle/3.2/model/_sources/composite-types/NameType/index.rst.txt
NameType
--------

A reusable type assigned to an element with the naming convention XxxName e.g. OrganizationName at selected locations where the element may be assumed to be administered by a registry or is otherwise shared. This is a human understandable name (word, phrase, or mnemonic) that reflects the ISO/IEC 11179-5 naming principles. An item administered by a registry should have at least one name. Names within an administered registry should follow the naming conventions of the registry. If more than one name is provided the context of each name should be noted and one name selected as the preferred name. See ISO/IEC 11179-5 Information Technology - Metadata Registries (MDR) Part 5: naming and identification principles. ISO/IEC1179-5:2005(E).

Properties
~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "IsPreferred","boolean","0..1","If more than one name for the object is provided, use the isPreferred attribute to indicate which is the preferred name content. All other names should be set to isPreferred=""false""."
   "Context","string","0..1","A name may be specific to a particular context, i.e., a type of software, or a section of a registry. Identify the context related to the specified name."

Properties Inherited from InternationalStringType
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. csv-table::
   :header: "Name","Type","","Description"
   :widths: 15,10,5,100

   "String",":doc:`/composite-types/StringType/index`","0..n","A non-formatted string of text with an attribute that designates the language of the text. Repeat this object to express the same content in another language."


Item Type Hierarchy
~~~~~~~~~~~~~~~~~~~

* :doc:`/composite-types/InternationalStringType/index`
    * **NameType**
        * :doc:`/composite-types/LocationNameType/index`
        * :doc:`/composite-types/OrganizationNameType/index`


Relationships
~~~~~~~~~~~~~
The following types reference this type.

* :doc:`/item-types/Archive/index`
* :doc:`/item-types/BaseLogicalProduct/index`
* :doc:`/item-types/Category/index`
* :doc:`/item-types/CategoryGroup/index`
* :doc:`/item-types/CategoryScheme/index`
* :doc:`/item-types/CodeList/index`
* :doc:`/item-types/CodeListGroup/index`
* :doc:`/item-types/CodeListScheme/index`
* :doc:`/item-types/Comparison/index`
* :doc:`/item-types/Concept/index`
* :doc:`/item-types/ConceptGroup/index`
* :doc:`/item-types/ConceptScheme/index`
* :doc:`/item-types/ConceptualComponent/index`
* :doc:`/item-types/ConceptualVariable/index`
* :doc:`/item-types/ConceptualVariableGroup/index`
* :doc:`/item-types/ConceptualVariableScheme/index`
* :doc:`/item-types/ControlConstruct/index`
* :doc:`/item-types/ControlConstructGroup/index`
* :doc:`/item-types/ControlConstructScheme/index`
* :doc:`/item-types/DataCollection/index`
* :doc:`/item-types/DataRelationship/index`
* :doc:`/item-types/DataSet/index`
* :doc:`/item-types/DDIProfile/index`
* :doc:`/item-types/GenericMap/index`
* :doc:`/item-types/GeographicLocation/index`
* :doc:`/item-types/GeographicLocationGroup/index`
* :doc:`/item-types/GeographicLocationScheme/index`
* :doc:`/item-types/GeographicStructure/index`
* :doc:`/item-types/GeographicStructureGroup/index`
* :doc:`/item-types/GeographicStructureScheme/index`
* :doc:`/item-types/Instruction/index`
* :doc:`/item-types/InstructionGroup/index`
* :doc:`/item-types/Instrument/index`
* :doc:`/item-types/InstrumentGroup/index`
* :doc:`/item-types/InstrumentScheme/index`
* :doc:`/item-types/InterviewerInstructionScheme/index`
* :doc:`/item-types/ManagedDateTimeRepresentation/index`
* :doc:`/item-types/ManagedMissingValuesRepresentation/index`
* :doc:`/item-types/ManagedNumericRepresentation/index`
* :doc:`/item-types/ManagedRepresentationGroup/index`
* :doc:`/item-types/ManagedRepresentationScheme/index`
* :doc:`/item-types/ManagedScaleRepresentation/index`
* :doc:`/item-types/ManagedTextRepresentation/index`
* :doc:`/item-types/NCube/index`
* :doc:`/item-types/NCubeGroup/index`
* :doc:`/item-types/NCubeScheme/index`
* :doc:`/item-types/OrganizationGroup/index`
* :doc:`/item-types/OrganizationScheme/index`
* :doc:`/item-types/PhysicalDataProduct/index`
* :doc:`/item-types/PhysicalStructureGroup/index`
* :doc:`/item-types/PhysicalStructureScheme/index`
* :doc:`/item-types/ProcessingEventGroup/index`
* :doc:`/item-types/ProcessingEventScheme/index`
* :doc:`/item-types/ProcessingInstructionGroup/index`
* :doc:`/item-types/ProcessingInstructionScheme/index`
* :doc:`/item-types/QualityStandard/index`
* :doc:`/item-types/QualityStatement/index`
* :doc:`/item-types/QualityStatementGroup/index`
* :doc:`/item-types/QualityStatementScheme/index`
* :doc:`/item-types/QuestionBlock/index`
* :doc:`/item-types/QuestionGrid/index`
* :doc:`/item-types/QuestionGroup/index`
* :doc:`/item-types/QuestionItem/index`
* :doc:`/item-types/QuestionScheme/index`
* :doc:`/item-types/RecordLayoutGroup/index`
* :doc:`/item-types/RecordLayoutScheme/index`
* :doc:`/item-types/RepresentationMap/index`
* :doc:`/item-types/RepresentedVariable/index`
* :doc:`/item-types/RepresentedVariableGroup/index`
* :doc:`/item-types/RepresentedVariableScheme/index`
* :doc:`/item-types/SubUniverseClass/index`
* :doc:`/item-types/Universe/index`
* :doc:`/item-types/UniverseGroup/index`
* :doc:`/item-types/UniverseScheme/index`
* :doc:`/item-types/Variable/index`
* :doc:`/item-types/VariableGroup/index`
* :doc:`/item-types/VariableScheme/index`
* :doc:`/composite-types/AccessType/index`
* :doc:`/composite-types/EmbargoType/index`
* :doc:`/composite-types/GeographicLevelType/index`
* :doc:`/composite-types/LevelType/index`
* :doc:`/composite-types/LocationValueType/index`
* :doc:`/composite-types/LogicalRecordType/index`
* :doc:`/composite-types/ParameterType/index`
* :doc:`/composite-types/RecordRelationshipType/index`
* :doc:`/composite-types/SeriesStatementType/index`
* :doc:`/composite-types/SoftwareType/index`
* :doc:`/composite-types/VersionDistinctionType/index`

.. container:: image

   |stub|

.. |stub| image:: ../../images/NameType.svg

